Refactor to make use of an asynchronous Java task and annotated client and server endpoints and to restructure parts of the program into class files with independent responsibilities.  Enhance documentation and add a screenshot.

--- a/src/main/resources/fxml/hello.fxml
+++ b/src/main/resources/fxml/hello.fxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import org.tbee.javafx.scene.layout.fxml.MigPane?>
-<?import layouttests.migfxml.sample1.*?>
+<?import org.tbee.javafx.scene.layout.fxml.*?>
 
 <MigPane id="rootPane" fx:controller="org.jewelsea.websocket.test.HelloController"
         styleClass="main-panel"
